--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
                 </div>
                 <div class="banner-wrap">
                     <img src="/assets/img/e4b097c7092a28a8d9a6791754007573-43006d5d8dd63529268104830e10fc4f-banner 1 (1).jpg" alt="">
+                    <div class="banner-content">
+                        <h3>B2B marketplace for</h3>
+                        <h1>food and beverages</h1>
+                    </div>
+                    <div class="button-wrap">
+                        <button class="btn">Shop Now</button>
+                    </div>
                 </div>
                 <div class="right-cat">
                     <h4 class="heading">Our Benefits</h4>
@@ -109,5 +116,78 @@
             </div>
         </div>
     </section>
+    <section class="new-arrivals">
+        <div class="container">
+            <div class="carousel">
+                <div class="header">
+                    <h4>New Arrivals</h4>
+                    <div class="button">
+                        <a href="">View all</a>
+                    </div>
+                </div>
+                <div class="carousel-1">
+                    <div class="carousel-cell">
+                        <img src="/assets/img/product.png" alt="img">
+                        <p>Assorted Dried Fruits Box,500g-18oz…</p>
+                        <p class="price">AED 150</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <img src="/assets/img/product.png" alt="img">
+                        <p>Assorted Dried Fruits Box,500g-18oz…</p>
+                        <p class="price">AED 150</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <img src="/assets/img/product.png" alt="img">
+                        <p>Assorted Dried Fruits Box,500g-18oz…</p>
+                        <p class="price">AED 150</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <img src="/assets/img/product.png" alt="img">
+                        <p>Assorted Dried Fruits Box,500g-18oz…</p>
+                        <p class="price">AED 150</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <img src="/assets/img/product.png" alt="img">
+                        <p>Assorted Dried Fruits Box,500g-18oz…</p>
+                        <p class="price">AED 150</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <img src="/assets/img/product.png" alt="img">
+                        <p>Assorted Dried Fruits Box,500g-18oz…</p>
+                        <p class="price">AED 150</p>
+                    </div>
+                    <!-- <div class="carousel-cell">
+                        <img src="/assets/img/product.png" alt="img">
+                        <p>Assorted Dried Fruits Box,500g-18oz…</p>
+                        <p class="price">AED 150</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <img src="/assets/img/product.png" alt="img">
+                        <p>Assorted Dried Fruits Box,500g-18oz…</p>
+                        <p class="price">AED 150</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <img src="/assets/img/product.png" alt="img">
+                        <p>Assorted Dried Fruits Box,500g-18oz…</p>
+                        <p class="price">AED 150</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <img src="/assets/img/product.png" alt="img">
+                        <p>Assorted Dried Fruits Box,500g-18oz…</p>
+                        <p class="price">AED 150</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <img src="/assets/img/product.png" alt="img">
+                        <p>Assorted Dried Fruits Box,500g-18oz…</p>
+                        <p class="price">AED 150</p>
+                    </div>
+                  </div> -->
+
+            </div>
+        </div>
+    </section>
+    <script src="./assets/js/plugins/jquery.min.js"></script>
+    <script src="./assets/js/plugins/slick.js"></script>
+    <script src="./assets/js/app.js"></script>
 </body>
 </html>
